<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:title="@string/app_name"
    android:background="@color/colorPrimary"
    app:layout_scrollFlags="scroll|enterAlways"
    android:popupTheme="@style/AppTheme.PopupOverlay">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:layout_alignParentStart="true"
            android:paddingEnd="10dp"
            android:contentDescription="@string/backButton"
            android:src="@drawable/ic_arrow_back_black_24dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/addProductButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_black_24dp"
                android:scaleType="fitEnd"
                android:contentDescription="@string/heading"
                android:paddingEnd="10dp" />

            <ImageView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitEnd"
                android:layout_toEndOf="@+id/addProductButton"
                android:src="@drawable/ic_exit_to_app_white_24dp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/backButton" />

    </RelativeLayout>

</android.support.v7.widget.Toolbar>